--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,110 @@
                 </repository>
             </distributionManagement>
         </profile>
+        <profile>
+            <id>work</id>
+            <build>
+                <plugins>
+                    <!-- Sources Plugin -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <version>3.0.1</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>jar-no-fork</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <!-- Javadoc Plugin -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>3.0.1</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                                <configuration>
+                                    <additionalOptions>
+                                        <additionalOption>
+                                            -Xdoclint:none
+                                        </additionalOption>
+                                    </additionalOptions>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+
+            <distributionManagement>
+                <snapshotRepository>
+                    <id>snapshot</id>
+                    <url>https://packages.aliyun.com/maven/repository/2167308-snapshot-tiLbog/</url>
+                </snapshotRepository>
+                <repository>
+                    <id>release</id>
+                    <url>https://packages.aliyun.com/maven/repository/2167308-release-guB0k3/</url>
+                </repository>
+            </distributionManagement>
+        </profile>
+        <profile>
+            <id>myself</id>
+            <build>
+                <plugins>
+                    <!-- Sources Plugin -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <version>3.0.1</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>jar-no-fork</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <!-- Javadoc Plugin -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>3.0.1</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                                <configuration>
+                                    <additionalOptions>
+                                        <additionalOption>
+                                            -Xdoclint:none
+                                        </additionalOption>
+                                    </additionalOptions>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+
+            <distributionManagement>
+                <snapshotRepository>
+                    <id>snapshot</id>
+                    <url>https://packages.aliyun.com/maven/repository/2030847-snapshot-MRHEH1/</url>
+                </snapshotRepository>
+                <repository>
+                    <id>release</id>
+                    <url>https://packages.aliyun.com/maven/repository/2030847-release-zrlQOB/</url>
+                </repository>
+            </distributionManagement>
+        </profile>
     </profiles>
 
     <build>
@@ -156,5 +260,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
